--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Lora:ital,wght@0,400..700;1,400..700&family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Oswald:wght@200..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
 
 /* @tailwind base; */
 /* @tailwind components; */
@@ -46,11 +46,20 @@
   --color-sidebar-ring: var(--sidebar-ring);
 
   --font-open-sans: "Open Sans", sans-serif;
+  --font-poppins: "Poppins", sans-serif;
+  --font-montserrat: "Montserrat", sans-serif;
+  --font-inter: "Inter", sans-serif;
+  --font-oswald: "Oswald", sans-serif;
+  --font-merriweather: "Merriweather", serif;
+  --font-lora: "Lora", serif;
+  --font-roboto: "Roboto", sans-serif;
+  --font-playfair-display: "Playfair Display", serif;
+  --font-space-mono: "Space Mono", monospace;
 }
 
 @layer base {
   :root {
-    --radius: 0.75rem;
+    --radius: 1rem;
     --background: oklch(1 0 0);
     --foreground: oklch(0.141 0.005 285.823);
     --card: oklch(1 0 0);
@@ -119,7 +128,7 @@
   }
 
   [data-theme="red"] {
-    --radius: 0.65rem;
+    --radius: 1rem;
     --background: oklch(1 0 0);
     --foreground: oklch(0.141 0.005 285.823);
     --card: oklch(1 0 0);
@@ -188,7 +197,7 @@
   }
 
   [data-theme="rose"] {
-    --radius: 0.65rem;
+    --radius: 1rem;
     --background: oklch(1 0 0);
     --foreground: oklch(0.141 0.005 285.823);
     --card: oklch(1 0 0);
@@ -257,7 +266,7 @@
   }
 
   [data-theme="orange"] {
-    --radius: 0.65rem;
+    --radius: 1rem;
     --background: oklch(1 0 0);
     --foreground: oklch(0.141 0.005 285.823);
     --card: oklch(1 0 0);
@@ -326,7 +335,7 @@
   }
 
   [data-theme="green"] {
-    --radius: 0.65rem;
+    --radius: 1rem;
     --background: oklch(1 0 0);
     --foreground: oklch(0.141 0.005 285.823);
     --card: oklch(1 0 0);
@@ -395,7 +404,7 @@
   }
 
   [data-theme="blue"] {
-    --radius: 0.65rem;
+    --radius: 1rem;
     --background: oklch(1 0 0);
     --foreground: oklch(0.141 0.005 285.823);
     --card: oklch(1 0 0);
@@ -464,7 +473,7 @@
   }
 
   [data-theme="yellow"] {
-    --radius: 0.65rem;
+    --radius: 1rem;
     --background: oklch(1 0 0);
     --foreground: oklch(0.141 0.005 285.823);
     --card: oklch(1 0 0);
@@ -533,7 +542,7 @@
   }
 
   [data-theme="violet"] {
-    --radius: 0.65rem;
+    --radius: 1rem;
     --background: oklch(1 0 0);
     --foreground: oklch(0.141 0.005 285.823);
     --card: oklch(1 0 0);
@@ -634,10 +643,10 @@
     --sidebar-accent-foreground: oklch(0.4426 0.1653 352.3762);
     --sidebar-border: oklch(0.9311 0.0448 343.3135);
     --sidebar-ring: oklch(0.6002 0.2414 0.1348);
-    --font-sans: Poppins, sans-serif;
-    --font-serif: Playfair Display, serif;
-    --font-mono: Space Mono, monospace;
-    --radius: 0.5rem;
+    --font-sans: var(--font-poppins, sans-serif);
+    --font-serif: var(--font-playfair-display, serif);
+    --font-mono: var(--font-space-mono, monospace);
+    --radius: 1rem;
     --shadow-2xs: 0px 3px 0px 0px hsl(330 70% 30% / 0.09);
     --shadow-xs: 0px 3px 0px 0px hsl(330 70% 30% / 0.09);
     --shadow-sm:
@@ -747,7 +756,7 @@
     --font-sans: Quicksand, sans-serif;
     --font-serif: Playfair Display, serif;
     --font-mono: Space Mono, monospace;
-    --radius: 0.5rem;
+    --radius: 1rem;
     --shadow-2xs: 0px 3px 0px 0px hsl(300 80% 50% / 0.09);
     --shadow-xs: 0px 3px 0px 0px hsl(300 80% 50% / 0.09);
     --shadow-sm:
@@ -802,9 +811,9 @@
     --sidebar-border: oklch(0.9115 0.0216 285.9625);
     --sidebar-ring: oklch(0.5417 0.179 288.0332);
     --font-sans: Inter, sans-serif;
-    --font-serif: Georgia, serif;
+    --font-serif: var(--font-lora), serif;
     --font-mono: JetBrains Mono, monospace;
-    --radius: 0.5rem;
+    --radius: 1rem;
     --shadow-2xs: 0px 4px 10px 0px hsl(240 30% 25% / 0.06);
     --shadow-xs: 0px 4px 10px 0px hsl(240 30% 25% / 0.06);
     --shadow-sm:
@@ -912,9 +921,9 @@
     --sidebar-border: oklch(0.3261 0.0597 282.5832);
     --sidebar-ring: oklch(0.7162 0.1597 290.3962);
     --font-sans: Inter, sans-serif;
-    --font-serif: Georgia, serif;
+    --font-serif: var(--font-lora), serif;
     --font-mono: JetBrains Mono, monospace;
-    --radius: 0.5rem;
+    --radius: 1rem;
     --shadow-2xs: 0px 4px 10px 0px hsl(240 30% 25% / 0.06);
     --shadow-xs: 0px 4px 10px 0px hsl(240 30% 25% / 0.06);
     --shadow-sm:
@@ -971,7 +980,7 @@
     --font-sans: Architects Daughter, sans-serif;
     --font-serif: "Times New Roman", Times, serif;
     --font-mono: "Courier New", Courier, monospace;
-    --radius: 0.625rem;
+    --radius: 1rem;
     --shadow-2xs: 1px 4px 5px 0px hsl(0 0% 0% / 0.01);
     --shadow-xs: 1px 4px 5px 0px hsl(0 0% 0% / 0.01);
     --shadow-sm:
@@ -1088,9 +1097,9 @@
     --sidebar-border: oklch(0.4276 0 0);
     --sidebar-ring: oklch(0.8078 0 0);
     --font-sans: Architects Daughter, sans-serif;
-    --font-serif: Georgia, serif;
+    --font-serif: var(--font-lora), serif;
     --font-mono: "Fira Code", "Courier New", monospace;
-    --radius: 0.625rem;
+    --radius: 1rem;
     --shadow-2xs: 1px 4px 5px 0px hsl(0 0% 0% / 0.01);
     --shadow-xs: 1px 4px 5px 0px hsl(0 0% 0% / 0.01);
     --shadow-sm:
@@ -1140,7 +1149,8 @@
     --sidebar-border: oklch(0 0 0);
     --sidebar-ring: oklch(0.6489 0.237 26.9728);
     --font-sans: DM Sans, sans-serif;
-    --font-serif: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
+    --font-serif:
+      ui-serif, var(--font-lora), Cambria, "Times New Roman", Times, serif;
     --font-mono: Space Mono, monospace;
     --radius: 0px;
     --shadow-2xs: 4px 4px 0px 0px hsl(0 0% 0% / 0.5);
@@ -1245,7 +1255,8 @@
     --sidebar-border: oklch(1 0 0);
     --sidebar-ring: oklch(0.7044 0.1872 23.1858);
     --font-sans: DM Sans, sans-serif;
-    --font-serif: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
+    --font-serif:
+      ui-serif, var(--font-lora), Cambria, "Times New Roman", Times, serif;
     --font-mono: Space Mono, monospace;
     --radius: 0px;
     --shadow-2xs: 4px 4px 0px 0px hsl(0 0% 0% / 0.5);
@@ -1305,7 +1316,7 @@
       --radius-xl: calc(var(--radius) + 4px);
     }
 
-    --radius: 0.625rem;
+    --radius: 1rem;
     --background: oklch(1 0 0); /* --color-white */
     --foreground: oklch(0.141 0.005 285.823); /* --color-zinc-950 */
     --card: oklch(1 0 0); /* --color-white */
